--- a/milestone-1/index.html
+++ b/milestone-1/index.html
@@ -13,6 +13,29 @@
     <div class="green_background"></div>
     <div class="grey_background"></div>
 
+    <div class="window_container m-auto my-3 d-flex">
+        <div class="window_left col-4">
+            <div class="head d-flex p-3">
+                <div class="me d-flex col-6 align-items-center">
+                    <img class = "avatar" src="../img/avatar_io.jpg" alt="">
+                    <p class="mx-2 user_name">Nome Utente</p>
+                </div>
+                <div class="d-flex col-6 align-items-center justify-content-end">
+                    <i class="fas fa-circle-notch"></i>
+                    <i class="fas fa-comment-alt"></i>
+                    <i class="fas fa-ellipsis-v"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="window_right">
+            <div class="head">
+
+            </div>
+        </div>
+
+    </div>
+
     <script src="./assets/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
 </body>
