--- a/milestone-1/index.html
+++ b/milestone-1/index.html
@@ -26,6 +26,16 @@
                     <i class="fas fa-ellipsis-v"></i>
                 </div>
             </div>
+            <div class="desktop_notification lightblue_bg d-flex align-items-center justify-content-center py-3">
+                <span class="bell_container">
+                    <i class="fas fa-bell-slash"></i>
+                </span>
+                <div class="mx-3">
+                    <p>Ricevi notifiche di nuovi messaggi</p>
+                    <a href="#">Attiva notifiche desktop</a>
+                </div>
+
+            </div>
         </div>
 
         <div class="window_right">
