--- a/milestone-1/index.html
+++ b/milestone-1/index.html
@@ -13,7 +13,7 @@
     <div class="green_background"></div>
     <div class="grey_background"></div>
 
-    <div class="window_container m-auto my-3 d-flex">
+    <div class="window_container m-auto my-3 d-flex" id="root">
         <div class="window_left col-4">
             <div class="head d-flex p-3">
                 <div class="me d-flex col-6 align-items-center">
@@ -26,6 +26,7 @@
                     <i class="fas fa-ellipsis-v"></i>
                 </div>
             </div>
+
             <div class="desktop_notification lightblue_bg d-flex align-items-center justify-content-center py-3">
                 <span class="bell_container">
                     <i class="fas fa-bell-slash"></i>
@@ -34,7 +35,15 @@
                     <p>Ricevi notifiche di nuovi messaggi</p>
                     <a href="#">Attiva notifiche desktop</a>
                 </div>
+            </div>
 
+            <div class="search_bar bg-white d-flex p-2 align-items-center">
+                <i class="fas fa-search"></i><input type="text" placeholder="Cerca o inizia una nuova chat">
+            </div>
+
+            <div class="friend" v-for="(contact, index) in contacts" >
+                <img class="avatar" v-bind:src=" `../img/avatar` + contacts[index].avatar " alt="">
+                <p>{{contact[index]avatar}}</p>
             </div>
         </div>
 
