--- a/milestone-1/index.html
+++ b/milestone-1/index.html
@@ -13,7 +13,7 @@
     <div class="green_background"></div>
     <div class="grey_background"></div>
 
-    <div class="window_container m-auto my-3 d-flex" id="root">
+    <div class="window_container ml-auto mr-auto my-3 d-flex" id="root">
         <div class="window_left col-4">
             <div class="head d-flex py-3">
                 <div class="me d-flex col-6 align-items-center">
