comunque finita milestone 1, pusho e stacco

--- a/milestone-1/index.html
+++ b/milestone-1/index.html
@@ -49,8 +49,8 @@
                 </div>
             </div>
 
-            <div class="search_bar bg-white d-flex p-2 align-items-center">
-                <i class="fas fa-search"></i><input type="text" placeholder="Cerca o inizia una nuova chat">
+            <div class="search_bar d-flex p-2 align-items-center">
+                <i class="fas fa-search"></i><input class="py-2" type="text" placeholder="Cerca o inizia una nuova chat">
             </div>
 
             <div class="friend py-2 px-3 d-flex position-relative" v-for="contact in contacts" >
