cambiato qualche dettaglio grafico

--- a/milestone-1/index.html
+++ b/milestone-1/index.html
@@ -49,11 +49,13 @@
                 </div>
             </div>
 
-            <div class="search_bar d-flex p-2 align-items-center">
-                <i class="fas fa-search"></i><input class="py-2" type="text" placeholder="Cerca o inizia una nuova chat">
+            <div class="search_bar  p-2 align-items-center">
+                <div class="d-flex align-items-center bg-white">
+                    <i class="fas fa-search"></i><input class="py-2" type="text" placeholder="Cerca o inizia una nuova chat">
+                </div>
             </div>
 
-            <div class="friend py-2 px-3 d-flex position-relative" v-for="contact in contacts" >
+            <div class="friend py-3 px-3 d-flex position-relative" v-for="contact in contacts" >
                 <!-- SONO BLOCCATO DA UN'ORA PERCHÉ NON AGGIUNGEVO JPG ALLA FINE DEL PERCORSOOOOOOO -->
                 <img class="avatar" v-bind:src=" `../img/avatar` + contact.avatar + `.jpg`" alt="">
                 <div class="chat_preview py-2 px-3">
