--- a/milestone-2/index.html
+++ b/milestone-2/index.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
 
-            <div class="friend py-3 px-3 d-flex position-relative" v-for="contact in contacts" >
+            <div class="friend py-3 px-3 d-flex position-relative" :class ="index == activeContact ? `active` : ``" v-for="(contact, index) in contacts" @click = "selectThis(index)">
                 <!-- SONO BLOCCATO DA UN'ORA PERCHÉ NON AGGIUNGEVO JPG ALLA FINE DEL PERCORSOOOOOOO -->
                 <img class="avatar" v-bind:src=" `../img/avatar` + contact.avatar + `.jpg`" alt="">
                 <div class="chat_preview py-2 px-3">
@@ -75,13 +75,13 @@
         <div class="window_right col-8 p-0 position-relative">
             <div class="head p-3">
                 <div class="activeFriend d-flex col-6">
-                        <img class="avatar" v-bind:src=" `../img/avatar` + contacts[counter].avatar + `.jpg`" alt="">
+                        <img class="avatar" v-bind:src=" `../img/avatar` + contacts[activeContact].avatar + `.jpg`" alt="">
                         <div class="active_friend_info mx-3 col-8">
                             <p class="font-weight-bold">
-                                {{contacts[counter].name}}
+                                {{contacts[activeContact].name}}
                             </p>
                             <p class="small_font pr-4">
-                                Ultimo accesso oggi alle {{contacts[counter].messages[lastOfArray(contacts[counter].messages)].date}}
+                                Ultimo accesso oggi alle {{contacts[activeContact].messages[lastOfArray(contacts[activeContact].messages)].date}}
                             </p>
                         </div>
                 </div>
@@ -93,9 +93,16 @@
                 </div>
             </div>
 
-            <div class="main_chat px-4 bg_pattern">
-
+            <!-- main chat -->
+            
+            <div class="main_chat px-4 bg_pattern d-flex flex-column py-3 px-5">
+                <div class="message my-2 position-relative" :class="message.status == `received` ? `received` : `sent`" v-for="message in contacts[activeContact].messages">
+                    <p>{{message.text}}</p>
+                    <p class="chat_message_date">{{message.date}}</p>
+                </div>
             </div>
+
+            <!-- //main chat -->
 
             <div class="chat_controller d-flex justify-content-around align-items-center">
                 <i class="far fa-smile"></i>
