fatta funzione di invio messaggio, manca data

--- a/milestone-3/index.html
+++ b/milestone-3/index.html
@@ -104,11 +104,17 @@
 
             <!-- //main chat -->
 
+
+            <!-- controller e input chat -->
+
             <div class="chat_controller d-flex justify-content-around align-items-center">
                 <i class="far fa-smile"></i>
-                <input class="my-2 px-3 col-10" type="text" name="chatMessage" id="chatMessage" placeholder="Scrivi un messaggio">
+                <input class="my-2 px-3 col-10" type="text" name="chatMessage" id="chatMessage" placeholder="Scrivi un messaggio" v-model="writtenMessage" @keyup.enter="sendMessage(writtenMessage)">
                 <i class="fas fa-microphone"></i>
             </div>
+
+             <!-- controller e input chat -->
+
         </div>
 
         <!-- /window right -->
